lab1/Test/L1-A-9-58.output
Error Type B at Line 6
Error Type B at Line 39
Error Type B at Line 41
Error Type B at Line 51
